fix skills not showing up in chat feed

--- a/gui/scss/Obsidian.scss
+++ b/gui/scss/Obsidian.scss
@@ -73,7 +73,7 @@ $chatDeletedColor: gray;
 $chatTextColor: white;
 $chatBorder: #cecece;
 $chat-message-alternate-bg: #4c4d52;
-$sticker-bg-color:#29374a;
+$sticker-bg-color:#2F3136;
 
 // Connection panel
 $connection-tile-bg: #43454A;
